k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-pipeline
  namespace: k8s-pipeline
spec:
  selector:
    matchLabels:
      app: deployment-pipeline
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: deployment-pipeline
    spec:
      containers:
      - name: deployment-pipeline
        image: 706339012951.dkr.ecr.ap-southeast-1.amazonaws.com/staticapp:number
        ports:
        - containerPort: 80
