k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-pipeline
  namespace: k8s-pipeline
spec:
  selector:
    app: deployment-pipeline
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
